# flask-multipass-authentik

./: .header.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: releasing.yaml  testing.yaml
src/: flask_multipass_authentik.py
