[virtualenvs]
create = true
in-project = true
prefer-active-python = true

[tool.poetry]
name = "Flask-Multipass-Authentik"
version = "0.0.2"
description = "Flask-Multipass provider for Authentik"
repository = "https://github.com/RobotHanzo/flask-multipass-authentik"
readme = "README.md"
license = "MIT"
authors = [
  "RobotHanzo <admin@robothanzo.dev>",
]
maintainers = [
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Flask",
]

[tool.poetry.dependencies]
python = "~=3.9"
flask-multipass = {extras = ["authlib"], version = ">=0.4.3"}
authentik-client = "^2025.8.3"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.4.0"
ruff = "^0.1.8"
unbeheader = "^1.3.0"

[tool.poetry.plugins."flask_multipass.auth_providers"]
authentik = "flask_multipass_authentik:AuthentikAuthProvider"

[tool.poetry.plugins."flask_multipass.identity_providers"]
authentik = "flask_multipass_authentik:AuthentikIdentityProvider"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
